# rlmesh

./: .codebook.toml  .gitattributes  .gitignore  .oxfmtrc.json  .readthedocs.yaml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  buf.yaml  cliff.toml  deny.toml  fnox.toml  mise.toml  prek.toml  pyproject.toml  rlmesh.toml
crates/rlmesh/: Cargo.toml  README.md
crates/rlmesh-adapters/: Cargo.toml  README.md
crates/rlmesh-adapters/conformance/v1/: README.md
crates/rlmesh-adapters/src/: apply.rs  describe.rs  envelope.rs  error.rs  fmt.rs  join.rs  keys.rs  lib.rs  path.rs  plans.rs  resolver.rs  roles.rs  space_view.rs  spec.rs  stateful.rs
crates/rlmesh-adapters/src/apply/: action.rs  geometry.rs  image.rs  lookup.rs  obs.rs  state.rs  text.rs  value.rs
crates/rlmesh-adapters/src/plans/: action.rs  custom.rs  image.rs  state.rs  text.rs
crates/rlmesh-adapters/src/resolver/: action.rs  custom.rs  image.rs  state.rs  text.rs
crates/rlmesh-adapters/src/roles/: core.rs  manipulation.rs  registry.rs
crates/rlmesh-adapters/src/spec/: accept_set.rs  action.rs  env.rs  env_tags.rs  layouts.rs  leaf_codec.rs  model.rs  num.rs  rotations.rs  strict.rs
crates/rlmesh-adapters/src/v1/: error.rs  fmt.rs  join.rs  keys.rs  mod.rs  pyfmt.rs  space_view.rs
crates/rlmesh-adapters/tests/: conformance.rs  error_messages.rs  tolerance_roundtrip.rs
crates/rlmesh-cli/: Cargo.toml  README.md
crates/rlmesh-cli/src/: cli.rs  lib.rs  main.rs  viewer.rs  viewtest.rs
crates/rlmesh-grpc/: Cargo.toml  README.md
crates/rlmesh-grpc/src/: connect.rs  env.rs  error.rs  floor.rs  health.rs  helpers.rs  lib.rs  lifecycle.rs  model.rs  states.rs  wire.rs
crates/rlmesh-grpc/src/env/: client.rs  environment.rs  episode.rs  mod.rs  protocol.rs  server.rs  stream.rs  wire.rs
crates/rlmesh-grpc/src/helpers/: address.rs  address_tests.rs  auth.rs  handshake.rs  mod.rs
crates/rlmesh-grpc/src/model/: client.rs  mod.rs  protocol.rs  stream.rs  validation.rs  validation_tests.rs  wire.rs
crates/rlmesh-grpc/src/wire/: env.rs  mod.rs  model.rs  spaces.rs  value.rs
crates/rlmesh-proto/: Cargo.toml  README.md  build.rs
crates/rlmesh-proto/src/: lib.rs
crates/rlmesh-runtime/: Cargo.toml  README.md
crates/rlmesh-runtime/src/: driver.rs  episodes.rs  hooks.rs  lib.rs  spec.rs  state.rs
crates/rlmesh-runtime/src/driver/: error.rs
crates/rlmesh-runtime/src/hooks/: chain.rs  events.rs  mod.rs  traits.rs
crates/rlmesh-runtime/src/route/: requests.rs
crates/rlmesh-runtime/src/state/: mod.rs  route.rs  tests.rs  types.rs
crates/rlmesh-runtime/src/telemetry/: mod.rs  reservoir.rs  stats.rs
crates/rlmesh-runtime/src/timing/: mod.rs  phase.rs  reservoir.rs  runtime.rs  stats.rs  tests.rs  window.rs
crates/rlmesh-runtime/tests/: driver.rs  proto_reexport.rs
crates/rlmesh-sandbox/: Cargo.toml  README.md
crates/rlmesh-sandbox/src/: docker.rs  error.rs  hf.rs  lib.rs  recipe.rs  source.rs  wheel.rs
crates/rlmesh-sandbox/tests/golden/: gym_atari.dockerfile  gym_atari.recipe.json  libero.dockerfile  libero.recipe.json  safety_gymnasium.dockerfile  safety_gymnasium.recipe.json
crates/rlmesh-spaces/: Cargo.toml  README.md
crates/rlmesh-spaces/src/: display.rs  dtype.rs  errors.rs  lib.rs  meta.rs  render.rs  request.rs  sample.rs  scalar.rs  spaces.rs  types.rs
crates/rlmesh-spaces/src/spaces/: composite.rs  fundamental.rs  mod.rs  space.rs  value.rs  walk.rs
crates/rlmesh-spaces/src/tensor/: dlpack.rs  mod.rs  proptests.rs  storage.rs
crates/rlmesh-spaces/src/v1/: dtype.rs  meta.rs  mod.rs  request.rs  scalar.rs  types.rs
crates/rlmesh-spaces/tests/: conformance.rs
crates/rlmesh-viewer/: Cargo.toml  MANUAL_TEST.md  README.md
crates/rlmesh-viewer/src/: frame.rs  graphics.rs  http.rs  lib.rs  terminal.rs  viewer.rs
crates/rlmesh/examples/: run_model.rs  serve_env.rs
crates/rlmesh/src/: address.rs  bound.rs  env.rs  error.rs  lib.rs  lifecycle.rs  model.rs  prelude.rs  serve_options.rs  single.rs  spaces.rs  tests.rs
crates/rlmesh/src/env/: client.rs  mod.rs  server.rs  types.rs  wire.rs
crates/rlmesh/src/model/: engine.rs  handler.rs  lifecycle.rs  local.rs  mod.rs  predict_fn.rs  remote.rs  server.rs  telemetry.rs  tests.rs  types.rs  wire.rs  worker.rs
examples/python/sai-mujoco/: README.md  mise.toml  pyproject.toml  serve.py
python/rlmesh/: LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
python/rlmesh/rust/: Cargo.toml  build.rs
python/rlmesh/rust/src/: adapters.rs  client.rs  lib.rs  lifecycle.rs  model.rs  peer_info.rs  sandbox.rs  server.rs  spaces.rs  telemetry.rs  telemetry_view.rs  types.rs  viewer.rs
python/rlmesh/src/rlmesh/: __init__.py  __main__.py  _authoring.py  _framework_bridge.py  _frameworks.py  _load_native.py  _native.py  _peer_info.py  _rlmesh.pyi  _sandbox_bootstrap.py  _sandbox_model.py  _server.py  _server_bridge.py  _serving.py  _value_conversion.py  _values.py  _variants.py  describe.py  jax.py  model.py  numpy.py  sandbox.py  serve.py  server.py  serving.py  spaces.py  specs.py  torch.py  types.py
python/rlmesh/tests/: test_no_authoring_import.py
python/rlmesh/tests/api_contract/: test_api_surface.py  test_public_api_snapshot.py
python/rlmesh/tests/api_surface/: test_api_surface.py  test_api_surface_contract.py  test_native_stub_exports.py
python/rlmesh/tests/conformance/: test_adapter_vectors.py
python/rlmesh/tests/integration/: test_adapters_live.py  test_gymnasium_spaces.py  test_jax.py  test_lifecycle.py  test_numpy.py  test_remote_model.py  test_torch.py  test_vectorized_model.py
python/rlmesh/tests/unit/: test_adapters.py  test_authoring.py  test_batched_fusion.py  test_bootstrap.py  test_byo_container.py  test_cli_entrypoint.py  test_corner_synthesis.py  test_describe.py  test_dlpack.py  test_env_framework.py  (+31 more)
tools/rlmesh_api_surface/: pyproject.toml
tools/rlmesh_system/: pyproject.toml
tools/rlmesh_system/tests/: test_runner.py  test_wheel.py
tools/rlmesh_system_fixtures/: README.md  pyproject.toml
tools/rlmesh_system_fixtures/tests/: test_fixtures.py
(+509 files in other folders)
