[workspace]
default-members = [
    "crates/rlmesh",
    "crates/rlmesh-cli",
    "crates/rlmesh-grpc",
    "crates/rlmesh-proto",
    "crates/rlmesh-runtime",
    "crates/rlmesh-sandbox",
    "crates/rlmesh-spaces",
    "python/rlmesh/rust",
]
members = ["crates/*", "python/rlmesh/rust"]
resolver = "3"

[workspace.package]
version = "0.1.0-beta.1"
authors = [
    "ArenaX Labs, Inc. <research@competesai.com>",
    "Josh Blayone <josh@arenaxlabs.com>",
]
edition = "2024"
homepage = "https://rlmesh.dev"
repository = "https://github.com/ArenaX-Labs/rlmesh"
documentation = "https://docs.rs/rlmesh"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "science", "simulation"]
keywords = ["rl", "evaluation", "runtime", "grpc", "gymnasium"]
publish = true

[workspace.dependencies]
# Rust Framework Crates
rlmesh = { version = "=0.1.0-beta.1", path = "crates/rlmesh" }
rlmesh-cli = { version = "=0.1.0-beta.1", path = "crates/rlmesh-cli" }
rlmesh-grpc = { version = "=0.1.0-beta.1", path = "crates/rlmesh-grpc" }
rlmesh-proto = { version = "=0.1.0-beta.1", path = "crates/rlmesh-proto" }
rlmesh-runtime = { version = "=0.1.0-beta.1", path = "crates/rlmesh-runtime" }
rlmesh-sandbox = { version = "=0.1.0-beta.1", path = "crates/rlmesh-sandbox" }
rlmesh-spaces = { version = "=0.1.0-beta.1", path = "crates/rlmesh-spaces" }

# Protocol / Transport
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
hyper-util = "0.1"

# Async Runtime
async-trait = "0.1"
futures = "0.3"
tokio = "1.50"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling / Logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
base64 = "0.22"
half = "2"
image = { version = "0.25", default-features = false }
rand = "0.10"
sha2 = "0.10"
tempfile = "3"
uuid = "1"

# Python Bindings
pyo3 = "0.28"
pyo3-build-config = "0.28"
pyo3-stub-gen = { version = "0.22.3", default-features = false }

# GUI / CLI
clap = "4.6"
egui = "0.34"
eframe = { version = "0.34", default-features = false }

[workspace.lints]
