[workspace]
default-members = [
  "crates/rlmesh",
  "crates/rlmesh-adapters",
  "crates/rlmesh-cli",
  "crates/rlmesh-grpc",
  "crates/rlmesh-proto",
  "crates/rlmesh-runtime",
  "crates/rlmesh-sandbox",
  "crates/rlmesh-spaces",
  "python/rlmesh/rust",
]
members = ["crates/*", "python/rlmesh/rust"]
resolver = "3"

[workspace.package]
version = "0.1.0-rc.2"
authors = ["ArenaX Labs, Inc. <research@competesai.com>", "Josh Blayone <josh@arenaxlabs.com>"]
edition = "2024"
homepage = "https://rlmesh.dev"
repository = "https://github.com/ArenaX-Labs/rlmesh"
documentation = "https://docs.rs/rlmesh"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "science", "simulation"]
keywords = ["rl", "evaluation", "runtime", "grpc", "gymnasium"]
publish = true

[workspace.dependencies]
# Rust Framework Crates
rlmesh = { version = "=0.1.0-rc.2", path = "crates/rlmesh" }
rlmesh-adapters = { version = "=0.1.0-rc.2", path = "crates/rlmesh-adapters" }
rlmesh-cli = { version = "=0.1.0-rc.2", path = "crates/rlmesh-cli" }
rlmesh-grpc = { version = "=0.1.0-rc.2", path = "crates/rlmesh-grpc" }
rlmesh-proto = { version = "=0.1.0-rc.2", path = "crates/rlmesh-proto" }
rlmesh-runtime = { version = "=0.1.0-rc.2", path = "crates/rlmesh-runtime" }
rlmesh-sandbox = { version = "=0.1.0-rc.2", path = "crates/rlmesh-sandbox" }
rlmesh-spaces = { version = "=0.1.0-rc.2", path = "crates/rlmesh-spaces" }

# Protocol / Transport
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
hyper-util = "0.1"

# Async Runtime
async-trait = "0.1"
futures = "0.3"
tokio = "1.52"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"

# Error Handling / Logging
anyhow = "1"
thiserror = "2"
proptest = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
half = "2"
image = { version = "0.25", default-features = false }
rand = "0.10"
sha2 = "0.11"
tempfile = "3"
uuid = "1"

# Python Bindings
pyo3 = "0.29"
pyo3-build-config = "0.29"
pyo3-stub-gen = { version = "0.23", default-features = false }
pyo3-stub-gen-derive = "0.23"

# CLI
clap = "4.6"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Defense-in-depth: keep release builds consistent with dev/test (which check
# overflow by default) so a silent integer wraparound can't fabricate a wrong
# result in a frozen-contract system. The load-bearing guards are the explicit
# checked_add sites; this is the backstop. One-line revert if a hot path needs it.
[profile.release]
overflow-checks = true
