[project]
name = "rlmesh-workspace"
version = "0.1.0b3"
description = "Development workspace for RLMesh"
requires-python = ">=3.10"
authors = [{ name = "ArenaX Labs", email = "research@competesai.com" }]
maintainers = [{ name = "Josh Blayone", email = "josh@arenaxlabs.com" }]
dependencies = ["rlmesh"]

[dependency-groups]
dev = [
  "basedpyright==1.36.1",
  "ruff==0.14.9",
  "pytest==8.4.2",
  "rlmesh[gymnasium,numpy,torch,bfloat16,jax]",
  "rlmesh-api-surface",
  "rlmesh-system",
  "rlmesh-system-fixtures",
]
docs = ["furo", "myst-parser", "sphinx", "sphinx-autobuild", "sphinx-copybutton"]

[tool.basedpyright]
include = [
  "examples/python",
  "python/rlmesh/src/rlmesh",
  "python/rlmesh/tests/unit",
  "python/rlmesh/tests/type_contract/fixtures",
  "tools/rlmesh_api_surface/src/rlmesh_api_surface",
]
typeCheckingMode = "basic"
strict = ["python/rlmesh/src/rlmesh"]
defineConstant = { DEBUG = true }
extraPaths = ["python/rlmesh/src"]
venvPath = "."
venv = ".venv"
failOnWarnings = false

reportMissingImports = "error"
reportMissingTypeStubs = false
reportExplicitAny = false
reportImplicitOverride = "none"

pythonVersion = "3.10"
pythonPlatform = "All"
# tools/ run only in the 3.11+ dev venv (tomllib); the 3.10 floor applies to the
# shipped package and its user-facing tests.
executionEnvironments = [{ root = "tools", pythonVersion = "3.11" }, { root = "." }]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "tools/rlmesh_api_surface/src",
  "tools/rlmesh_system/src",
  "tools/rlmesh_system_fixtures/src",
]

[tool.ruff]
force-exclude = true
include = [
  "python/**/*.py",
  "python/**/*.pyi",
  "python/**/pyproject.toml",
  "examples/**/*.py",
  "tests/**/*.py",
  "tools/**/*.py",
]
extend-exclude = ["python/rlmesh/src/rlmesh/_rlmesh.pyi"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "N", # pep8-naming
  "D", # pydocstyle
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "RUF", # ruff-specific
]
ignore = [
  "RUF059", # unused unpack vars (gym API always returns 5-tuples)
  "E501", # line too long (formatter handles this)
  "D105", # skip magic method docstrings
  "D107", # document constructors on the class docstring
]

[tool.ruff.lint.per-file-ignores]
"examples/python/**" = ["D", "F841"]
"python/rlmesh/tests/**" = ["B017", "D"]
"python/rlmesh/tests/type_contract/fixtures/**" = ["D"]
"tests/system/**" = ["B017", "D"]
"tools/rlmesh_api_surface/**" = ["D"]
"tools/rlmesh_system/**" = ["B017", "D"]
"tools/rlmesh_system_fixtures/**" = ["B017", "D"]
"python/rlmesh/examples/**" = ["F405", "D"]
"python/rlmesh/src/rlmesh/_cli/**" = ["D"]
"python/rlmesh/src/rlmesh/__main__.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
constraint-dependencies = [
  "gymnasium==1.3.0",
  "numpy==2.2.6 ; python_version < '3.11'",
  "numpy==2.4.6 ; python_version >= '3.11'",
  "torch==2.12.0+cpu ; sys_platform != 'darwin'",
  "torch==2.12.0 ; sys_platform == 'darwin'",
]

[tool.uv.sources]
rlmesh = { workspace = true }
rlmesh-api-surface = { workspace = true }
torch = [{ index = "pytorch-cpu" }]
rlmesh-system = { workspace = true }
rlmesh-system-fixtures = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.workspace]
members = [
  "python/*",
  "tools/rlmesh_api_surface",
  "tools/rlmesh_system",
  "tools/rlmesh_system_fixtures",
]
