[package]
name = "rlmesh-adapters"
description = "Internal RLMesh crate (unstable Rust API): declarative env-model IO spec resolution."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
rlmesh-spaces = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
