[package]
name = "rlmesh-proto"
description = "Internal RLMesh crate (unstable Rust API): protobuf definitions and generated gRPC stubs."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-prost", "tonic-prost-build"]

# The build script invokes `protoc` to generate the gRPC stubs. The docs.rs
# build image ships `protoc` (via the crates-build-env `protobuf-compiler`
# package), so no extra escape hatch is needed; this block documents the docs.rs
# build expectations and renders all targets.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints]
workspace = true
