[package]
name = "rlmesh-runtime"
description = "Internal RLMesh crate (unstable Rust API): runtime driver for evaluation sessions."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[features]
default = []

[dependencies]
rlmesh-proto = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-util = { workspace = true }
prost = { workspace = true }
# The runtime is the sole episode-id authority (R1): it mints UUIDv7 episode ids
# (time-ordered) on every reset and pushes them down to the env.
uuid = { workspace = true, features = ["v7"] }

tracing = { workspace = true }

serde = { workspace = true }

thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
