[package]
name = "rlmesh-sandbox"
description = "Docker-backed environment packaging and execution for RLMesh evaluation workflows"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
rlmesh-grpc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
