[package]
name = "rlmesh-spaces"
description = "Space specifications and value model for RLMesh environments and bindings"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
half = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
