[package]
name = "rlmesh-spaces"
description = "Internal RLMesh crate (unstable Rust API): space specifications and value model."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
# `chacha20::ChaCha12Rng` is the pinned sampler RNG: rand's StdRng is the same
# algorithm today but rand reserves the right to change it across versions, so
# pinning the concrete cipher freezes the seed->sample contract. `rand` is kept
# minimal (no OS-entropy default features) — the sampler only needs its
# distribution methods on a supplied RNG, never thread/OS randomness.
chacha20 = { workspace = true }
half = { workspace = true }
# Declared directly (not workspace-inherited) so default features can be off:
# the sampler needs only rand's distribution methods on a supplied RNG, never
# OS/thread entropy. Version tracks the workspace `rand`.
rand = { version = "0.10", default-features = false }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
