[package]
name = "rlmesh-viewer"
description = "Internal RLMesh crate (unstable Rust API): live debug viewer."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
serde_json = { workspace = true }
tracing = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
tiny_http = "0.12"
crossterm = "0.29"

[lints]
workspace = true
