[package]
name = "rlmesh"
description = "Rust SDK for model-environment evaluation workflows"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

# docs.rs renders an "Examples found in repository" block on the API items each
# example calls. Scraping is nightly-only; docs.rs builds nightly, the stable
# local/CI `cargo doc` does not, so this flag stays out of the local doc build.
[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
async-trait = { workspace = true }
rlmesh-spaces = { workspace = true }
rlmesh-grpc = { workspace = true }
rlmesh-proto = { workspace = true }
rlmesh-runtime = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { workspace = true, features = ["net"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
tonic-health = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
