[project]
name = "rlmesh"
version = "0.1.0b2"
description = "Python SDK for model-environment evaluation workflows"
authors = [{ name = "ArenaX Labs, Inc.", email = "research@competesai.com" }]
maintainers = [{ name = "Josh Blayone", email = "josh@arenaxlabs.com" }]
readme = "README.md"
keywords = [
  "machine-learning",
  "evaluation",
  "model-evaluation",
  "benchmarking",
  "environments",
  "runtime",
]
license = "MIT OR Apache-2.0"
license-files = [
  "LICENSE-MIT",
  "LICENSE-APACHE",
  "THIRD_PARTY_NOTICES.md",
  "third_party_licenses/**/*",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://rlmesh.dev"
Repository = "https://github.com/ArenaX-Labs/rlmesh"
Documentation = "https://docs.rlmesh.dev"
Issues = "https://github.com/ArenaX-Labs/rlmesh/issues"

[project.optional-dependencies]
gymnasium = ["gymnasium>=0.26.1"]
gym = ["gym>=0.22.0"]

# NumPy support for Python 3.10 was introduced in 1.21, but only has built wheels
# starting from 1.21.2. However, 1.22+ seems to be when Python 3.10 support was
# truly stable, which also coincides with the DLPack backend release, making it a
# solid floor version to pick.
numpy = ["numpy>=1.22"]

# torch 1.11 is the first release with full Python 3.10 wheel coverage and the
# first to expose top-level torch.from_dlpack, which rlmesh.torch relies on.
torch = ["torch>=1.11"]

# jnp.from_dlpack needs bool DLPack support, which jax added in 0.4.24
# (Feb 2024). That is also close to the practical install floor: jaxlib
# releases below 0.4.18 have been removed from PyPI. jax does not declare
# jaxlib as a dependency until 0.4.31, so both must be pinned explicitly.
jax = ["jax>=0.4.24", "jaxlib>=0.4.24"]

# NumPy has no native bfloat16 dtype; ml_dtypes supplies one for
# rlmesh.numpy.asarray on bfloat16 tensors.
bfloat16 = ["ml_dtypes"]

[project.scripts]
rlmesh = "rlmesh.__main__:main"

[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rlmesh._rlmesh"
python-source = "src"
no-default-features = true
features = ["viewer", { feature = "pyo3/abi3-py311", python-version = ">=3.11" }]
exclude = [
  ".pytest_cache/**",
  "dist/**",
  "rust/**",
  "src/**/__pycache__/**",
  "src/**/*.pyc",
  "src/**/*.so",
  "tests/**",
]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "rust/Cargo.toml" },
  { file = "rust/**/*.rs" },
  { file = "../../crates/**/Cargo.toml" },
  { file = "../../crates/**/*.rs" },
]
