[project]
name = "rlmesh-api-surface"
version = "0.1.0"
description = "Private RLMesh public API surface extraction helpers"
requires-python = ">=3.10"
dependencies = ["griffe>=1.15,<2"]

[project.scripts]
rlmesh-api-surface = "rlmesh_api_surface.api_surface:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rlmesh_api_surface = ["api_metadata.json"]
