[project]
name = "rlmesh-system"
version = "0.1.0"
description = "RLMesh installed-artifact system test orchestrator"
requires-python = ">=3.10"
dependencies = ["rich>=13.9.4,<15.0.0"]

[project.scripts]
rlmesh-system = "rlmesh_system.runner:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
