[project]
name = "rlmesh-system-fixtures"
version = "0.1.0"
description = "Private RLMesh system test fixture entrypoints"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
