[project]
name = "rlmesh-example-sai-mujoco"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["sai-mujoco>=0.1.30", "gymnasium[mujoco]", "mujoco==3.3.5", "rlmesh", "numpy"]

[dependency-groups]
dev = ["pytest"]

[tool.uv.sources]
rlmesh = { path = "../../../python/rlmesh", editable = true }
