[package]
name = "rlmesh-python"
description = "Native extension bridge for the RLMesh Python package"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
publish = false

[package.metadata.cargo-machete]
ignored = ["pyo3-build-config"]

[lib]
name = "_rlmesh"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
doc = false

[features]
default = []
abi3-py311 = ["pyo3/abi3-py311"]

[dependencies]
rlmesh = { workspace = true }
rlmesh-cli = { workspace = true }
rlmesh-grpc = { workspace = true }
rlmesh-sandbox = { workspace = true }
rlmesh-spaces = { workspace = true }

async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

half = { workspace = true }
image = { workspace = true, features = ["png"] }
pyo3 = { workspace = true, features = [
  "auto-initialize",
  "extension-module",
  "generate-import-lib",
] }
pyo3-stub-gen = { workspace = true }
rand = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true, features = ["resolve-config"] }

[lints]
workspace = true
